# rival

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
rival/: __init__.py
rival/cli/: main.py
rival/core/: benchmark.py  config.py  dataset.py  evaluator.py  experiment.py  registry.py  trainer.py
rival/history/: history_manager.py  leaderboard.py
rival/metrics/: metrics.py
rival/models/: sklearn_models.py
rival/utils/: seed.py
