[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rival"
version = "0.1.0"
description = "Lightweight ML benchmarking CLI tool"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "typer>=0.9",
]

[project.scripts]
rival = "rival.cli.main:app"

[project.optional-dependencies]
xgb = ["xgboost>=1.7"]
