[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rivalml"
version = "0.1.0"
description = "Lightweight ML benchmarking tool for reproducible model comparison"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Ömer Faruk Akdağ"}
]

dependencies = [
  "pandas",
  "scikit-learn",
  "numpy",
  "typer",
  "tabulate"
]

[project.scripts]
rival = "rival.cli.main:app"

[project.optional-dependencies]
xgb = ["xgboost>=1.7"]